syntax = "proto3";

option go_package = "common/user";

package user;

service UserService{
        rpc Get(GetRequest) returns(GetResponse) {}
        rpc Create(CreateRequest) returns(GetResponse) {}
        rpc Update(UpdateRequest) returns(GetResponse) {}
        rpc Delete(DeleteRequest) returns(DeleteResponse) {}
}

message GetRequest {
        string id = 1;
}

message GetResponse {
        string id = 1;
        string name = 2;
        string surname = 3;
        string email = 4;
        Address address = 5;
}

message Address {
        string street = 1;
        string city = 2;
        string country = 3;
}

message CreateRequest{
        string name = 1;
        string surname = 2;
        string email = 3;
        Address address = 4;
}

message UpdateRequest{
        string id = 1;
        string name = 2;
        string surname = 3;
        string email = 4;
        Address address = 5;
}

message DeleteRequest{
        string id = 1;
        string role = 2;
}

message DeleteResponse {
        string message = 1;
}
